--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/App.js",
-    "dev": "nodemon ./src/App.js",
+    "start": "pm2-runtime start ecosystem.config.js --env production",
+    "dev": "nodemon ./src/app.js",
     "migrate": "npx knex migrate:latest"
   },
   "keywords": [],
@@ -14,11 +14,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "multer": "^1.4.5-lts.1",
+    "pm2": "^5.3.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7"
   },
